samples/_failures_safe/1761454962_381ea6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16f2a993.c: In function ‘main’:
./samples/SAFE/__tmp_16f2a993.c:131:10: error: expected expression at end of input
  131 |     enum MatrixOp op =
      |          ^~~~~~~~
./samples/SAFE/__tmp_16f2a993.c:131:10: error: expected declaration or statement at end of input
